--- a/DataStructure/算法/查找算法/二分查找.md
+++ b/DataStructure/算法/查找算法/二分查找.md
@@ -17,7 +17,7 @@
 
 ## 代码描述
 
-　　先用快排对数据进行排序，然后设定 begin=0,end=length-1，mid = begin+(end-begin)/2，查找 mid 的值与 key 的大小。
+　　先设定 begin=0,end=length-1，mid = begin+(end-begin)/2，查找 mid 的值与 key 的大小。
 
 　　如果相同，返回 index。
 
@@ -25,24 +25,69 @@
 
 　　然后循环，直到 end < begin，返回 -1。
 
+```java
+/**
+ * 二分查找
+ */
+public class BinarySearch {
+
+    /**
+     * 递归
+     *
+     * @param array
+     * @param low
+     * @param high
+     * @param key
+     * @return
+     */
+    public static int binarySearch(int array[], int low, int high, int key) {
+        if (low > high) return -1;
+        int mid = low + (high - low) / 2;
+        if (array[mid] > key) {
+            return binarySearch(array, low, mid - 1, key);
+        } else if (array[mid] < key) {
+            return binarySearch(array, mid + 1, high, key);
+        } else {
+            return mid;
+        }
+    }
+
+    /**
+     * 非递归
+     *
+     * @param a
+     * @param key
+     * @return
+     */
+    public static int binarySearchWithoutRecusion(int a[], int key) {
+        int low = 0;
+        int high = a.length - 1;
+        while (low <= high) {
+            int mid = low + (high - low) / 2;
+            if (a[mid] > key) {
+                high = mid - 1;
+            } else if (a[mid] < key) {
+                low = mid + 1;
+            } else {
+                return mid;
+            }
+        }
+        return -1;
+    }
+
+    public static void main(String[] args) {
+        int a[] = new int[]{0, 1, 2, 3, 4, 5, 6, 7, 8, 9};
+        System.out.println("search 7:" + binarySearch(a, 0, a.length - 1, 7));
+        System.out.println("search 5:" + binarySearchWithoutRecusion(a, 5));
+    }
+}
 ```
 
-```
+　　输出为：
 
-
-
-### 递归
-
-```
-
-```
-
-
-
-### 非递归
-
-```
-
+```java
+search 7:7
+search 5:5
 ```
 
 ## 二分查找的复杂度
