--- a/DataStructure/算法/查找算法/斐波那契查找.md
+++ b/DataStructure/算法/查找算法/斐波那契查找.md
@@ -42,11 +42,82 @@
 
 ## 斐波那契查找的代码
 
+```java
+/**
+ * 斐波那契查找
+ */
+public class FibonacciSearch {
+
+    public static int fibonacciSearch(int[] nums, int key) {
+        int orginalLength = nums.length;
+        // 建立斐波那契数列，用 list 不断加入，直到 > orginalLenght
+        List<Integer> fiboList = new ArrayList<>();
+        fiboList.add(0);
+        fiboList.add(1);
+        int i = 2;
+        while (true) {
+            Integer now = fiboList.get(i - 2) + fiboList.get(i - 1);
+            fiboList.add(now);
+            i++;
+            if (now > orginalLength) {
+                break;
+            }
+        }
+        // 斐波那契数列的最后一位 F(k),newLength=F(k)-1>= originalLenght
+        int k = fiboList.size() - 1;
+        int newLength = fiboList.get(k) - 1;
+        // 将原来排序后的数据假如长度为 newLength 的数组中，多出来空位的用最后一位填满
+        int[] newNums = new int[newLength];
+        for (i = 0; i < newLength; i++) {
+            if (i < orginalLength) {
+                newNums[i] = nums[i];
+            } else {
+                newNums[i] = nums[orginalLength - 1];
+            }
+        }
+        //begin = 0,end=newLength-1，k=上面对应的 k
+        int begin = 0;
+        int end = newLength - 1;
+        // 循环，直到 end<begin，返回-1
+        while (begin <= end) {
+            // 中间值跨度为 fiboList.get(k - 1) - 1
+            int mid = begin + fiboList.get(k - 1) - 1;
+            int now = nums[mid];
+            if (now == key) {
+                // 如果相同，返回 index，如果 index >= orginalLength,返回 orginalLength-1
+                if (mid >= orginalLength) {
+                    return orginalLength - 1;
+                }
+                return mid;
+            }
+            if (now < key) {
+                // 如果 mid < key，那么 begin = mid+1,k = k-2
+                begin = mid + 1;
+                k = k - 2;
+            }
+            if (now > key) {
+                // 如果 mid>key，那么 end = mid -1,k = k-1
+                end = mid - 1;
+                k = k - 1;
+            }
+        }
+        return -1;
+    }
+
+    public static void main(String[] args) {
+        int a[] = new int[]{0, 1, 2, 3, 4, 5, 6, 7, 8, 9};
+        System.out.println("search 7:" + fibonacciSearch(a, 7));
+        System.out.println("search 5:" + fibonacciSearch(a, 5));
+    }
+}
 ```
 
+　　输出：
+
+```java
+search 7:7
+search 5:5
 ```
-
-
 
 ## 参考文章
 
