--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -161,23 +161,23 @@
 #### 计划
 
 1. 查找算法
-   1. 查找算法知识 - 7/19
+   1. 查找算法知识 
    2. 顺序查找 - 已完成
-   3. 二分查找 - 7/15
+   3. 二分查找 
    4. 插值查找 -已完成
-   5. 斐波那契查找 - 7/26
+   5. 斐波那契查找
    6. 二叉树查找 - 已完成
    7. 平衡查找树之2-3查找树（2-3 Tree） - 已完成
-   8. 平衡查找树之红黑树（Red-Black Tree） - 7/23
-   9. B 树和 B+ 树（B Tree/B+ 树）  - 7/24
-   10. 分块查找 - 7/25
-   11. 哈希查找 - 7/25
+   8. 平衡查找树之红黑树（Red-Black Tree）
+   9. B 树和 B+ 树（B Tree/B+ 树）
+   10. 分块查找 
+   11. 哈希查找 
 2. 排序算法
-   1. 排序算法总结 - 7/25
-   2. 直接插入排序 - 7/25
-   3. 希尔排序 - 7/26
-   4. 简单选择排序  - 7/26
-   5. 堆排序  - 7/26
+   1. 排序算法总结
+   2. 直接插入排序
+   3. 希尔排序
+   4. 简单选择排序
+   5. 堆排序
    6. 冒泡排序
    7. 快速排序
    8. 归并排序
@@ -195,7 +195,7 @@
 9. 并查集
 10. 堆
 12. 线性表
-13. 栈 - 7/18
+13. 栈 
 14. glide 整理
 15. gradle
 16. 数据库
