--- a/DataStructure/数据结构/树/红黑树.md
+++ b/DataStructure/数据结构/树/红黑树.md
@@ -18,7 +18,7 @@
 
  　　红黑树的特性：
 
-1. 每个结点时黑色或红色。
+1. 每个结点是黑色或红色。
 2. 根结点是黑色。
 3. 每个叶子结点（NIL）是黑色。（注意：这里叶子结点，是指空（NIL 或 NULL）的叶子结点）。
 4. 如果一个结点是红色的，则它的子节点必须是黑色的。
@@ -28,7 +28,7 @@
 
 ## 2. 红黑树基本操作
 
- 　　红黑树的基本操作是添加、删除。在对红黑树进行添加或删除之后，都会用到旋转方法。这是因为添加或删除红黑树种的结点之后，红黑树的结构就发生了变化，可能不满足红黑树的 5 条性质，也就不再是一棵红黑树了，而是一棵普通的树。而通过旋转和变色，可以使这颗树重新成为红黑树。简单点说，旋转和变色的目的是让树保持红黑树的特性：自平衡二叉树。
+ 　　红黑树的基本操作是添加、删除。在对红黑树进行添加或删除之后，都会用到旋转方法。这是因为添加或删除红黑树中的结点之后，红黑树的结构就发生了变化，可能不满足红黑树的 5 条性质，也就不再是一棵红黑树了，而是一棵普通的树。而通过旋转和变色，可以使这颗树重新成为红黑树。简单点说，旋转和变色的目的是让树保持红黑树的特性：自平衡二叉树。
 
  　　旋转包括两种：左旋和右旋。
 
@@ -54,9 +54,7 @@
 
  　　旋转是局部的。另外可以看出旋转能保持红黑树平衡的一些特性：当一边子树的节点少了，那么向另外一边子树 “ 借 ” 一些节点，当一边子树的节点多了，那么向另外一边子树 “ 租 ” 一些节点。
 
- 　　
-
-## 3.添加
+## 3. 插入
 
  　　插入的情况可以总结为下面这些：
 
@@ -115,7 +113,7 @@
 
 * 将 P 设为黑色
 * 将 PP 设为红色
-* 对 PP 机性右旋
+* 对 PP 进行右旋
 
 ![](image/红黑树叔叔节点不存在插入节点是其父节点左子节点.png)
 
@@ -172,9 +170,9 @@
 * 情景 2：若删除节点只有一个子节点，用子节点替换删除节点。
 * 情景 3：若删除节点有两个子节点，用后继节点（大于删除节点的最小节点）替换删除节点。
 
-　　情景 3 中可以用前继节点（小于删除节点的最大节点）替换删除节点吗？可以的。但习惯上大多都是拿后继节点来替代，后文的讲解也是用后继节点来替代。
+　　情景 3 中也可以用前继节点（小于删除节点的最大节点）替换删除节点，但习惯上大多都是拿后继节点来替代，后文的讲解也是用后继节点来替代。
 
-　　一种找前继和后继节点的只管的放啊：把二叉树所有节点投射在 X 轴上，所有节点都是从左到右排好序的，所有目标节点的前后节点就是对应的前继和后继节点。
+　　一种找前继和后继节点的直观的方法：把二叉树所有节点投射在 X 轴上，所有节点都是从左到右排好序的，所有目标节点的前后节点就是对应的前继和后继节点。
 
 ![](image/找前继和后继节点.png)
 
@@ -192,7 +190,7 @@
 
 ![](image/红黑树删除节点图.png)
 
-　　途中字母并不代表节点 Key 的大小。R 表示替代节点，P 表示替代节点的父节点，S 表示替代节点的兄弟节点，SL 表示兄弟节点的左子节点，SR 表示兄弟节点的右子节点。红色节点表示它可以是红色也可以是黑色。
+　　图中字母并不代表节点 Key 的大小。R 表示替代节点，P 表示替代节点的父节点，S 表示替代节点的兄弟节点，SL 表示兄弟节点的左子节点，SR 表示兄弟节点的右子节点。红色节点表示它可以是红色也可以是黑色。
 
 　　R 是即将被替换到删除节点的位置的替代节点，在删除前，它还在原来所在位置参与树的子平衡，平衡后再替换到删除节点的位置，才算删除完成。
 
@@ -200,7 +198,7 @@
 
 ### 情景 1：替换节点是红色节点
 
-　　把替换节点替换带了删除节点的位置时，由于替换节点是红色，删除也了不会影响红黑树的平衡，只要把替换节点的颜色设为删除接待你的颜色即可重新平衡。
+　　把替换节点替换到了删除节点的位置时，由于替换节点是红色，删除了也不会影响红黑树的平衡，只要把替换节点的颜色设为删除的节点的颜色即可重新平衡。
 
 　　处理：
 
@@ -310,7 +308,7 @@
 
 ![](image/红黑树删除节点替换右兄弟左黑右红.png)
 
-###### 情景 2.2.2.3：替换节点的兄弟接待你的子节点都为黑节点
+###### 情景 2.2.2.3：替换节点的兄弟节点的子节点都为黑节点
 
 　　处理：
 
@@ -758,8 +756,6 @@ public class RBTree {
     }
 }
 ```
-
-
 
 ## 6. 参考文章
 
