--- a/DataStructure/算法/排序算法/堆排序.md
+++ b/DataStructure/算法/排序算法/堆排序.md
@@ -10,6 +10,8 @@
 
 　　此处以大顶推为例，堆排序的过程就是将待排序的序列构建成一个堆，选出堆中最大的移走，再把剩余的元素调整成堆，找出最大的再移走，重复直至有序。
 
+　　堆排序的主要思想是：给定一个待排序序列，首先经过一次调整，将序列构建成一个大顶堆，此时第一个元素最大的元素，将其和序列的最后一个元素交换，然后对前 n-1 个元素调整为大顶堆，再将其第一个元素和末尾元素交换，这样最后即可得到有序序列。
+
 ## 算法描述
 
 1. 先将初始序列 K[1...n] 建成一个大顶堆，那么此时第一个元素 K1 最大，此堆为初始的无序区。
@@ -52,7 +54,9 @@
 
 ## 总结与思考
 
-　　由于堆排序中初始化堆的过程比较次数比较多，因此它不太适用于小序列。同时由于多次任意下标相互交换位置，相同元素之间原本想对的顺序被破坏了，因此，它是不稳定的排序。
+　　由于堆排序中初始化堆的过程比较次数比较多，因此它不太适用于小序列，也不适宜于记录数较少的文件。同时由于多次任意下标相互交换位置，相同元素之间原本想对的顺序被破坏了，因此，它是不稳定的排序。
+
+　　与快排和归并排序相比，堆排序在最差情况下的时间复杂度优于快排，空间效率高于归并排序。
 
 ## 参考文章
 
