--- a/DataStructure/算法/排序算法/希尔排序.md
+++ b/DataStructure/算法/排序算法/希尔排序.md
@@ -9,13 +9,13 @@
 
 　　希尔排序是先将整个待排序的记录序列分割成为若干子序列分别进行直接插入排序，待整个序列中的记录 “ 基本有序 ” 时，再对全体记录进行依次直接插入排序。
 
-## 基本思想
+## 1. 基本思想
 
 　　将待排序数组按照步长 gap 进行分组，然后将每组的元素利用直接插入排序的方法进行排序；每次再将 gap 折半减少，循环上述操作；当 gap = 1 时，利用直接插入，完成排序。
 
-　　可以看到步长的选择时希尔排序的重要部分。只要最终步长为 1 任何步长序列都可以工作。一般来说最简单的步长取值是初次取数组长度的一半为增量，之后每次再减半，直到增量为 1。
+　　可以看到步长的选择是希尔排序的重要部分。只要最终步长为 1 任何步长序列都可以工作。一般来说最简单的步长取值是初次取数组长度的一半为增量，之后每次再减半，直到增量为 1。
 
-## 算法描述
+## 2. 算法描述
 
 1. 选择一个增量序列 t1,t2,......,tk，其中 ti > tj，tk=1；
 2. 按增量序列个数 k，对序列进行 k 趟排序；
@@ -25,7 +25,7 @@
 
 ![](image/希尔排序.png)
 
-## 代码实现
+## 3. 代码实现
 
 ```java
 /**
@@ -39,8 +39,10 @@ public class HiliSort {
         for (; h >= 1; h /= 3) { // 步长的循环
             System.out.println();
             System.out.println("h:" + h);
+            // 分块
             for (int i = 0; i < a.length - h; i += h) {
                 System.out.println("i:" + i);
+                // 对分块的内容进行排序
                 for (int j = i + h; j > 0; j -= h) {
                     System.out.print("j:" + j+",");
                     if (a[j] < a[j-h]) {
@@ -91,7 +93,7 @@ j:8,j:7,j:6,j:5,j:4,j:3,j:2,j:1,
 a:[1, 2, 3, 4, 5, 6, 7, 8, 9]
 ```
 
-## 复杂分析
+## 4. 复杂分析
 
 　　以下是希尔排序复杂度：
 
@@ -99,11 +101,11 @@ a:[1, 2, 3, 4, 5, 6, 7, 8, 9]
 | -------------- | ---------- | ---------- | ---------- |
 | O(nlog2 n)     | O(nlog2 n) | O(nlog2 n) | O(1)       |
 
-## 总结与思考
+## 5. 总结与思考
 
 　　希尔排序更高效的原因是它权衡了子数组的规模和有序性。排序之初，每个子数组都很短，排序之后子数组都是部分有序的，这两种情况都很适合插入排序。
 
-## 参考文章
+## 6. 参考文章
 
 1. [Java实现八大排序算法](https://www.cnblogs.com/morethink/p/8419151.html)
 
