--- a/DataStructure/算法/查找算法/分块查找.md
+++ b/DataStructure/算法/查找算法/分块查找.md
@@ -51,11 +51,112 @@
 
 ## 分块查找的代码
 
+```java
+/**
+ * 分块查找
+ */
+public class BlockSearch {
+
+    public static boolean blockSearch(int[] nums, int key) {
+        int length = nums.length;
+        int max = nums[0];
+        int min = nums[0];
+
+        // 遍历 nums 数组，得到 min 和 max
+        for (int i = 0; i < length; i++) {
+            int now = nums[i];
+            if (now > max) {
+                max = now;
+            }
+            if (now < min) {
+                min = now;
+            }
+        }
+
+        // 区块数量 blockNum = length 的开方
+        int blockNum = (int) Math.sqrt(length);
+        // 根据 blockNum 分块，建立 index 数组，代表每个区块的 min 数字
+        // interval = (max-min)/blockNum
+        // 分为 min，min+interal*1,...,min+interal*(blockNum-1)
+        int[] index = new int[blockNum];
+        double interval = (max - min) / (double) blockNum;
+        for (int i = 0; i < blockNum; i++) {
+            index[i] = (int) (min + interval * i);
+        }
+
+        // 初始化 list 数组及其中的 arrayList
+        List<ArrayList<Integer>> list = new ArrayList<>();
+        for (int i = 0; i < blockNum; i++) {
+            list.add(new ArrayList<>());
+        }
+
+        for (int i = 0; i < length; i++) {
+            int now = nums[i];
+            // 每个数对应的区块的 index 用二分法在 index 数组中查询
+            int indexNow = getIndex(index, now);
+            // 在对应取快中加入数字
+            list.get(indexNow).add(now);
+        }
+        // 数对应的区块的index 用二分法在 index 数组中查询
+        int indexNow = getIndex(index, key);
+        // 在区块中顺序查找
+        for (Integer now : list.get(indexNow)) {
+            if (now == key) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    /**
+     * 得到 key 对应 index 里的位置
+     * index[i+1] > key >= index[i]
+     *
+     * @param index
+     * @param key
+     * @return 如果找不到，返回 0
+     */
+    public static int getIndex(int[] index, int key) {
+        int begin = 0;
+        int end = index.length - 1;
+        // 循环，直到 end < begin，返回 -1
+        while (begin <= end) {
+            int mid = (begin + end) / 2;
+            int now = index[mid];
+            if (mid == index.length - 1 && key >= now) {
+                // 如果是最后一个，返回 index
+                return mid;
+            }
+            if (key >= now && key < index[mid + 1]) {
+                // index[i+1] > key >= index[i]
+                return mid;
+            }
+            if (now < key) {
+                // 如果 mid < key，那么 begin = mid+1
+                begin = mid + 1;
+            }
+            if (now > key) {
+                // 如果 mid > key，那么 end = mid - 1;
+                end = mid - 1;
+            }
+        }
+        return 0;
+    }
+
+    public static void main(String[] args) {
+        int a[] = new int[]{9, 1, 2, 7, 4, 8, 6, 3, 5};
+        System.out.println("search 7:" + blockSearch(a, 7));
+        System.out.println("search 11:" + blockSearch(a, 11));
+    }
+}
 ```
 
+　　输出结果：
+
+```java
+search 7:true
+search 11:false
 ```
-
-
 
 ## 参考文章
 
