--- a/DataStructure/算法/查找算法/哈希查找.md
+++ b/DataStructure/算法/查找算法/哈希查找.md
@@ -1,6 +1,6 @@
 #  哈希查找
 
-## 哈希查找的基本思想
+## 1. 哈希查找的基本思想
 
 　　算法思想：哈希的思路很简单，如果所有的键都是整数，那么就可以使用一个简单的无序数组来实现：将键作为索引，值即为其对应的值，这样就可以快速访问任意键的值。这是对于简单的键的情况，将其扩展到可以处理更加复杂的类型的键。
 
@@ -12,7 +12,7 @@
 
 　　哈希表是一个在时间和空间上做出权衡的经典例子。如果没有内存限制，那么可以直接将键作为数组的索引。那么所有的查找时间复杂度为 O(1)，如果没有时间限制，那么可以使用无序数组进行顺序查找，这样只需要很少的内存。哈希表使用了适度的时间和空间来在这两个计算之间找到了平衡。只需要调整哈希函数算法即可在时间和空间上做出取舍。
 
-## 哈希查找的复杂度
+## 2. 哈希查找的复杂度
 
 　　单纯论查找复杂度：对于无冲突的 hash 表而言，查找复杂度为 O(1)（注意，在查找之前需要构建相应的 Hash 表）。
 
@@ -20,7 +20,7 @@
 
 ![](image/哈希查找的复杂度.png)
 
-## 哈希查找的代码
+## 3. 哈希查找的代码
 
 ```java
 /**
@@ -40,6 +40,7 @@ public class HashSearch {
      */
     public static int hashSearch(int[] nums, int key) {
         int length = nums.length;
+        // hash 映射表
         HashMap<Integer, Integer> map = new HashMap<>();
         for (int i = 0; i < length; i++) {
             map.put(nums[i], i);
@@ -67,7 +68,7 @@ search 7:3
 search 11:-1
 ```
 
-## 参考文章
+## 4. 参考文章
 
 1. [查找算法总结-java版](https://blog.csdn.net/xushiyu1996818/article/details/90604118)
 
