--- a/DataStructure/算法/查找算法/平衡查找树之红黑树.md
+++ b/DataStructure/算法/查找算法/平衡查找树之红黑树.md
@@ -1,6 +1,6 @@
 #  平衡查找树之红黑树
 
-## 红黑树的基本思想
+## 1. 红黑树的基本思想
 
 　　2-3 查找树能保证在插入元素之后能保持树的平衡状态，最坏情况下即所有的子节点都是 2-nodes，树的高度为 lgn，从而保证了最坏情况下的时间复杂度。但是 2-3 树实现起来比较复杂，于是就有了一种简单实现 2-3 树的数据结构，即红黑树（Red-Black Tree）。
 
@@ -8,7 +8,7 @@
 
 ![](image/红黑树.png)
 
-## 红黑树的定义
+## 2. 红黑树的定义
 
 　　红黑树是一种具有红色和黑色链接的平衡查找树，同时满足：
 
@@ -22,17 +22,17 @@
 
 　　红黑树的性质：这个树完全黑色平衡，即从根节点到叶子节点的路径上，黑色链接的个数都相同（2-3 树的第 2 个性质，从根节点到叶子节点的距离都相等）。
 
-　　复杂度分析：最坏的情况就是，红黑树种除了最左侧路径全部是由 3-node 节点组成，即红黑相间的路径长度是全黑路径长度的 2 倍。
+　　复杂度分析：最坏的情况就是，红黑树中除了最左侧路径全部是由 3-node 节点组成，即红黑相间的路径长度是全黑路径长度的 2 倍。
 
 　　下图是一个典型的红黑树，从中可以看到最长的路径（红黑相间的路将）是最短路径的 2 倍：
 
 ![](image/典型红黑树.png)
 
-## 红黑树的代码
+## 3. 红黑树的代码
 
 []()
 
-## 参考文章
+## 4. 参考文章
 
 1. [查找算法总结-java版](https://blog.csdn.net/xushiyu1996818/article/details/90604118)
 
