--- a/DataStructure/算法/贪心算法.md
+++ b/DataStructure/算法/贪心算法.md
@@ -1,45 +1,45 @@
 #  贪心算法
 
-## 基本概念
+## 1. 基本概念
 
-　　所谓贪心算法是指，在对问题求解时，总是做出在当前看来是最好的选择。也就是说，不从整体最优上加以考虑，他所做出的仅是在某种意义上的局部最优解。
+　　所谓贪心算法是指，在对问题求解时，总是做出在当前看来是最好的选择。也就是说，不从整体最优上加以考虑，它所做出的仅是在某种意义上的局部最优解。
 
 　　贪心算法没有固定的算法框架，算法设计的关键是贪心策略的选择。必须注意的是，贪心算法不是对所有问题都能得到整体最优解，选择的贪心策略必须具备无后效性，即某个状态以后的过程不会影响以前的状态，只与当前状态有关。
 
 　　所以对所采用的贪心策略一定要仔细分析其是否满足无后效性。
 
-## 贪心算法的基本思路
+## 2. 贪心算法的基本思路
 
 1. 建立数学模型来描述问题。
 2. 把求解的问题分成若干个子问题。
 3. 对每一子问题求解，得到子问题的局部最优解。
 4. 把子问题的解局部最优解合成原来解问题的一个解。
 
-## 贪心算法适用的问题
+## 3. 贪心算法适用的问题
 
 　　贪心策略适用的前提是：局部最优策略能导致产生全局最优解。
 
 　　实际上，贪心算法适用的情况很少。一般，对一个问题分析是否适用于贪心算法，可以先选择该问题下的几个实际数据进行分析，就可做出判断。
 
-## 贪心算法的实现框架
+## 4. 贪心算法的实现框架
 
 　　从问题的某一初始解出发；
 
 ```java
 while (能朝给定总目标前进一步)
 {
-	利用课姓的决策，求出可行解的一个解元素；
+	利用可行的决策，求出可行解的一个解元素；
 }
 由所有解元素组合成问题的一个可行解；
 ```
 
-## 贪心策略的选择
+## 5. 贪心策略的选择
 
 　　因为用贪心算法只能通过解局部最优解的策略来达到全局最优解，因此，一定要注意判断问题是否适合采用贪心策略，找到的解是否一定是问题的最优解。
 
-## 例题分析
+## 6. 例题分析
 
-　　下面是一个可以试用贪心算法解的题目，贪心解的确不错，可惜不是最优解。
+　　下面是一个可以使用贪心算法解的题目，贪心解的确不错，可惜不是最优解。
 
 　　【背包问题】有一个背包，背包容量是 M=150。有 7 个物品，物品可以分割成任意大小。
 
@@ -59,7 +59,7 @@ while (能朝给定总目标前进一步)
 
 1. 根据贪心的策略，每次挑选价值最大的物品装入背包，得到的结果是否最优？
 2. 每次挑选所占重量最小的物品装入是否能得到最优解？
-3. 每次选取单位重量价值最大的物品，称为解本题的策略。
+3. 每次选取单位重量价值最大的物品，成为解本题的策略。
 
 　　值得注意的是，贪心算法并不是完全不可以使用，贪心策略一旦经过证明成立后，它就是一种高效的算法。
 
@@ -69,7 +69,7 @@ while (能朝给定总目标前进一步)
 
 　　一般来说，贪心算法的证明围绕着：这个问题的最优解一定由在贪心策略中存在的子问题的最优解的来的。
 
-　　对于例题中的 3 种贪心策略，都是无法成立（无法被证明）的，姐时如下：
+　　对于例题中的 3 种贪心策略，都是无法成立（无法被证明）的，解释如下：
 
 1. 贪心策略：选取价值最大者。
 
@@ -87,7 +87,7 @@ while (能朝给定总目标前进一步)
 
 2. 贪心策略：选取重量最小。
 
-   它的返利与第一种的反例差不多。
+   它的反例与第一种的反例差不多。
 
 3. 贪心策略：选取单位重量价值最大的物品。
 
@@ -103,6 +103,6 @@ while (能朝给定总目标前进一步)
 
    根据策略，三种物品单位重量价值一样，程序无法依据现有策略做出判断，如果选择 A，则答案错误。
 
-## 参考文章
+## 7. 参考文章
 
 1. [五大常用算法之三：贪心算法](https://www.cnblogs.com/steven_oyj/archive/2010/05/22/1741375.html)
