--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -157,41 +157,50 @@
 8. Set 集合
 9. 插值查找
 10. 二叉树查找
+11. 归并排序
+12. 分治算法
+13. 贪心算法
+14. 二分查找
+15. 红黑树
+16. 哈希查找
+17. 斐波那契查找
+18. 希尔排序
 
 #### 计划
 
 1. 查找算法
    1. 查找算法知识 
    2. 顺序查找 - 已完成
-   3. 二分查找 
+   3. 二分查找  - 已完成
    4. 插值查找 -已完成
-   5. 斐波那契查找
+   5. 斐波那契查找 - 已完成
    6. 二叉树查找 - 已完成
    7. 平衡查找树之2-3查找树（2-3 Tree） - 已完成
    8. 平衡查找树之红黑树（Red-Black Tree）
    9. B 树和 B+ 树（B Tree/B+ 树）
    10. 分块查找 
-   11. 哈希查找 
+   11. 哈希查找  - 已完成
 2. 排序算法
    1. 排序算法总结
    2. 直接插入排序
-   3. 希尔排序
+   3. 希尔排序 - 已完成
    4. 简单选择排序
    5. 堆排序
    6. 冒泡排序
    7. 快速排序
-   8. 归并排序
+   8. 归并排序 - 已完成
    9. 基数排序
 3. 常用的五大算法
    1. 递归 - 已完成
    2. 回溯算法
-   3. 分治算法
-   4. 贪心算法
-4. 红黑树
+   3. 分治算法 - 已完成
+   4. 贪心算法 - 已完成
+   5. 分支定界法
+4. 红黑树 - 已完成
 5. b树
 6. b+树
 7. 图
-8. Set 集合
+8. Set 集合 - 已完成
 9. 并查集
 10. 堆
 12. 线性表
@@ -214,14 +223,10 @@
 7/15
 
 * 图
-* 顺序查找 - 已完成
-* 二分查找
 
 7/16
 
-* Set 集合 - 已完成
 * 线性表链式存储
-* 插值查找  - 已完成
 
 7/17
 
@@ -232,19 +237,11 @@
 7/18
 
 * 堆
-* 斐波那契查找
-* 二叉树查找 - 已完成
 
 7/19
 
 * glide 整理
 * 冒泡排序
-
-7/20
-
-* 归并排序
-* 平衡查找树之2-3查找树（2-3 Tree）- 已完成
-* 递归 - 已完成
 
 7/21
 
@@ -256,19 +253,12 @@
 
 * B 树和 B+ 树（B Tree/B+ 树）
 * 排序算法总结
-* 分治算法
 
 7/23
 
 * 分块查找
 * 快速排序
 * 直接插入排序
-
-7/24
-
-* 哈希查找
-* 希尔排序
-* 贪心算法
 
 7/25
 
